tests/semantic/fail/flow-7.tiger
let
	var a := if 0 then () else ()
in
end
